# rust-httpfs

./: Cargo.toml  bench.txt  readme.md
data/: hello.txt
src/: cli.rs  colorize.rs  filesystem.rs  http_connection.rs  http_message.rs  http_parse.rs  http_parse_error.rs  http_server.rs  httpfs.rs  main.rs
src/httpfs/: connection.rs  formatting.rs  get.rs  head.rs  log.rs  parse.rs  parse_error.rs  post.rs  server.rs
